# Peer2Pear

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  PROTOCOL.md  README.md  REFACTOR_PLAN.md  SENDER_KEYS_PLAN.md  WYATT_BUG_REPORT.md  build-ios.sh  docker-compose.yml  setup.sh  vcpkg-configuration.json  vcpkg.json  winsetup.bat
.github/workflows/: release-linux.yml  release.yml
Peer2Pear_QtProj/: .gitignore  CMakeLists.txt  CMakePresets.json  ChatController.cpp  ChatController.hpp  ChatNotifier.h  CryptoEngine.cpp  CryptoEngine.hpp  DirectPeerLink.cpp  DirectPeerLink.hpp  FileTransferManager.cpp  FileTransferManager.hpp  HolePuncher.cpp  HolePuncher.hpp  MailboxClient.cpp  MailboxClient.hpp  Main.qml  NiceConnection.cpp  NiceConnection.hpp  NoiseState.cpp  NoiseState.hpp  QuicConnection.cpp  QuicConnection.hpp  RatchetSession.cpp  RatchetSession.hpp  RelayClient.hpp  RendezvousClient.cpp  RendezvousClient.hpp  SealedEnvelope.cpp  SealedEnvelope.hpp  SessionManager.cpp  SessionManager.hpp  SessionStore.cpp  SessionStore.hpp  SqlCipherDb.cpp  SqlCipherDb.hpp  StunClient.cpp  StunClient.hpp  chattypes.h  chatview.cpp  (+15 more)
Peer2Pear_QtProj/tests/: CMakeLists.txt  README.md  sodium_stubs.h  tst_chatcontroller.cpp  tst_contacts.cpp  tst_cryptoengine.cpp  tst_databasemanager.cpp  tst_filetransfer.cpp  tst_groupchat.cpp  tst_keys.cpp  tst_noisestate.cpp  tst_ratchetsession.cpp  tst_sealedenvelope.cpp  tst_sessionstore.cpp
Peer2Pear_QtProj/tests/sodium_stubs/: sodium.h  sodium_stub.c
Peer2Pear_QtProj/tests/stubs/: sodium.h
cmake/: ios.toolchain.cmake
core/: AppDataStore.cpp  AppDataStore.hpp  CMakeLists.txt  CausallyLinkedPairwise.hpp  ChatController.cpp  ChatController.hpp  CryptoEngine.cpp  CryptoEngine.hpp  FileProtocol.cpp  FileProtocol.hpp  FileTransferManager.cpp  FileTransferManager.hpp  GroupProtocol.cpp  GroupProtocol.hpp  IHttpClient.hpp  ITimer.hpp  IWebSocket.hpp  MigrationCrypto.cpp  MigrationCrypto.hpp  NoiseState.cpp  NoiseState.hpp  OnionWrap.cpp  OnionWrap.hpp  RatchetSession.cpp  RatchetSession.hpp  RelayClient.cpp  RelayClient.hpp  SealedEnvelope.cpp  SealedEnvelope.hpp  SenderChain.cpp  SenderChain.hpp  SessionManager.cpp  SessionManager.hpp  SessionSealer.cpp  SessionSealer.hpp  SessionStore.cpp  SessionStore.hpp  SqlCipherDb.cpp  SqlCipherDb.hpp  StdTimer.hpp  (+11 more)
core/tests/: CMakeLists.txt  README.md  test_app_data_store.cpp  test_c_api.cpp  test_c_api_e2e.cpp  test_crypto_engine.cpp  test_e2e_two_clients.cpp  test_file_protocol.cpp  test_file_transfer.cpp  test_group_protocol.cpp  test_identity_bundle.cpp  test_onion_wrap.cpp  test_ratchet_session.cpp  test_relay_cover_traffic.cpp  test_sealed_envelope.cpp  test_sender_chain.cpp  test_session_manager.cpp  test_session_sealer.cpp  test_sqlcipher_db.cpp  test_std_timer.cpp  test_support.hpp
desktop/: AppDataStoreQt.hpp  CMakeLists.txt  ChatNotifier.h  NiceConnection.cpp  NiceConnection.hpp  QrImage.cpp  QrImage.hpp  QtHttpClient.hpp  QtTimer.hpp  QtWebSocket.hpp  QuicConnection.cpp  QuicConnection.hpp  chattypes.h  chatview.cpp  chatview.h  databasemanager.cpp  databasemanager.h  dialogs.cpp  dialogs.h  filetransfer.h  lockoverlay.cpp  lockoverlay.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  migrationreceivedialog.cpp  migrationreceivedialog.h  migrationsenddialog.cpp  migrationsenddialog.h  migrationsettings.cpp  migrationsettings.h  onboardingdialog.cpp  onboardingdialog.h  passphrasedialog.cpp  passphrasedialog.h  qt_str_helpers.hpp  qt_thread_hop.hpp  settingspanel.cpp  settingspanel.h  (+3 more)
ios/: README.md  generate.sh  project.yml
ios/Peer2Pear/Configs/: Signing.local.xcconfig.template  Signing.xcconfig
ios/Peer2Pear/Resources/: Info.plist
ios/Peer2Pear/Sources/App/: Peer2PearApp.swift  Peer2PearAppDelegate.swift
ios/Peer2Pear/Sources/Bridge/: BiometricUnlock.swift  Peer2Pear-Bridging-Header.h  Peer2PearClient+AppData.swift  Peer2PearClient+Callbacks.swift  Peer2PearClient+FileTransfer.swift  Peer2PearClient+Groups.swift  Peer2PearClient+Notifications.swift  Peer2PearClient+Settings.swift  Peer2PearClient.swift
ios/Peer2Pear/Sources/Migration/: MigrationAppDataSnapshot.swift  MigrationBlob.swift  MigrationCryptoBridge.swift  MigrationHandshake.swift  MigrationSession.swift  MigrationSettings.swift
ios/Peer2Pear/Sources/Platform/: HttpAdapter.swift  ScreenCaptureMonitor.swift  WebSocketAdapter.swift
ios/Peer2Pear/Sources/Views/: ArchivedChatsView.swift  ChatListView.swift  ConversationView.swift  MyKeyView.swift  OnboardingView.swift  QRScannerView.swift  SettingsView.swift  TransferDeviceView.swift
ports-overlay/libsodium/: portfile.cmake
relay/: Dockerfile  requirements.txt  server.py
relay-go/: Dockerfile  docker-compose.yml  go.mod  go.sum  legacy.go  mailbox.go  mailbox_test.go  main.go  onion.go  onion_wrap_test.go  peer2pear_relay.db-shm  peer2pear_relay.db-wal  peer_hash.go  peer_hash_test.go  push.go  push_test.go  relay.go  relay_test.go  sqlcipher_test.go
